# simple-3d-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TaskFile.yml  cmake_install.cmake
.cache/clangd/index/: Metal_Blit.h.3FC4CBB34619524E.idx  SDL.c.BE7CB45DC6EBEFAA.idx  SDL.h.D1F568FE5DA03115.idx  SDL_RLEaccel.c.D489EC6993C6B71F.idx  SDL_RLEaccel_c.h.D126AB91A5C69139.idx  SDL_assert.c.BD1693A2F3B93E45.idx  SDL_assert.h.93B2A4078B6D45C0.idx  SDL_assert_c.h.883245E709AC5085.idx  SDL_asyncio.c.15C8BADB3CB5B945.idx  SDL_asyncio.h.6BB705799C0AA2F0.idx  SDL_asyncio_c.h.95E4F0554FDE584F.idx  SDL_asyncio_generic.c.0B8EA636F8ABAF30.idx  SDL_atomic.c.99AA4756E6DD91B1.idx  SDL_atomic.h.BEE7D45AB15051D7.idx  SDL_audio.c.7B956505838ECA76.idx  SDL_audio.h.A3AA8ADAA0CF62AB.idx  SDL_audio_c.h.5C718D95A9DBBB61.idx  SDL_audio_channel_converters.h.3CE3DDE995AE8F8B.idx  SDL_audiocvt.c.9D3CF4ACA608B1AA.idx  SDL_audiodev.c.71F305485B6E5FD5.idx  SDL_audioqueue.c.2E347CD2CAA26F42.idx  SDL_audioqueue.h.DFCFA00EBEE4F6BC.idx  SDL_audioresample.c.CA1967AC85800C05.idx  SDL_audioresample.h.C4124D3D7A10AA33.idx  SDL_audiotypecvt.c.56C30766B530B1A4.idx  SDL_begin_code.h.00006CC6E2AECE4E.idx  SDL_bits.h.FDE795A635DA2207.idx  SDL_blendfillrect.c.600DDB8180BD33B3.idx  SDL_blendfillrect.h.A2783E86FFFF5BFC.idx  SDL_blendline.c.7557E1DBFF1BBD9B.idx  SDL_blendline.h.A1488BE0BC258F87.idx  SDL_blendmode.h.D3BB72EFEA394E93.idx  SDL_blendpoint.c.4F4A7089CFDDB292.idx  SDL_blendpoint.h.FD396E677EFDCFB0.idx  SDL_blit.c.1656698D549D45FB.idx  SDL_blit.h.5050F4E1F86D79D5.idx  SDL_blit_0.c.29C76906505F0F2F.idx  SDL_blit_1.c.FE1835D44E766459.idx  SDL_blit_A.c.98D23B200971AB03.idx  SDL_blit_N.c.9F97BF89A14A3A3F.idx  (+492 more)
.cmake/api/v1/reply/: cache-v2-f7ae79daf85c7a30cf9d.json  cmakeFiles-v1-257cc0de2dd80a9492de.json  codemodel-v2-cd58235751ef5b298bf6.json  (+2 more)
include/: 3D_Rendering_Engine.hpp  common.hpp
shaders/compiled/: DebugDraw.vert.msl  Draw3DWireframes.vert.msl  MVPUniform.vert.msl  SolidColorDepth.frag.msl
shaders/source/: DebugDraw.vert.hlsl  Draw3DWireframes.vert.hlsl  MVPUniform.vert.hlsl  RawTriangle.vert.hlsl  SolidColor.frag.hlsl  SolidColorDepth.frag.hlsl  SoloWhite.frag.hlsl
src/: common.cpp  main.cpp
src/IOUtils/: IOUtils.hpp
src/TestRunner/: TestContext.hpp  TestRunner.hpp
